# cat

./: .gitignore  Cargo.toml
.cargo/: config.toml
canvas/: README.md  deploy.sh  package-lock.json  package.json  setup-terminal.sh
canvas/.devcontainer/: Dockerfile  devcontainer.json
canvas/src/: App.tsx  RosProvider.tsx  main.tsx
canvas/src/components/: Canvas.tsx
canvas/src/launch/: launch.py
canvas/src/utils/: calculations.ts
nucleo/src/: main.rs
ros/: .gitignore  Dockerfile  connect.sh  deploy.sh  docker-compose.yaml  readme.md  setup-terminal.sh
ros/.devcontainer/: Dockerfile  devcontainer.json
ros/serial_node/: CMakeLists.txt  package.xml
ros/serial_node/include/: serial_handler.hpp
ros/serial_node/src/: main.cpp  serial_handler.cpp
ros/src/feedback_node/: package.xml  setup.cfg  setup.py
ros/src/feedback_node/feedback_node/: node.py  start_node.py
ros/src/launch/: launch.py
ros/src/msgs/: CMakeLists.txt  package.xml
ros/src/msgs/msg/: EncoderFeedback.msg  MotorCommands.msg  SerialMessage.msg  Teleop.msg
ros/src/serial_node/: package.xml  setup.py
ros/src/serial_node/serial_node/: constants.py  mock_serial.py  node.py  serial.py  start_node.py
ros/src/teleop_node/: package.xml  setup.py
ros/src/teleop_node/teleop_node/: node.py
ros/teleop_node/teleop_node/: start_node.py
src/: main.rs  servo.rs
